--- a/src/infrastructure/template/new-organization.hbs
+++ b/src/infrastructure/template/new-organization.hbs
@@ -63,18 +63,14 @@ a[x-apple-data-detectors] {
 </style>
  </head>
  <body style="width:100%;font-family:'Satoshi', sans-serif;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%;padding:0;Margin:0">
-  <div dir="ltr" class="es-wrapper-color" width="100%" cellspacing="0" cellpadding="0" role="none" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;padding-top:20px;padding-bottom:20px;width:100%;height:100%;background-color:#F2F9FF"><!--[if gte mso 9]>
-			<v:background xmlns:v="urn:schemas-microsoft-com:vml" fill="t">
-				<v:fill type="tile" color="#f2f9ff"></v:fill>
-			</v:background>
-		<![endif]-->
-   <table class="es-wrapper" width="100%" cellspacing="0" cellpadding="0" role="none" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;padding:40px;Margin:0;width:100%;height:100%;background-repeat:repeat;background-position:center top;background-color:#F2F9FF">
+  <div dir="ltr" class="es-wrapper-color" style="background-color:#F2F9FF">
+   <table class="es-wrapper" width="100%" cellspacing="0" cellpadding="0" role="none" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;padding:0;Margin:0;width:100%;height:100%;background-repeat:repeat;background-position:center top;background-color:#F2F9FF">
      <tr style="border-collapse:collapse">
-      <td valign="top" style="padding:0;Margin:0">
-       <table cellpadding="0" cellspacing="0" class="es-content" align="center" role="none" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;table-layout:fixed !important;width:100%">
+      <td valign="top" style="padding:40px 20px;Margin:0">
+        <table cellpadding="0" cellspacing="0" class="es-content" align="center" role="none" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;table-layout:fixed !important;width:100%">
          <tr style="border-collapse:collapse">
           <td align="center" style="padding:0;Margin:0">
-           <table bgcolor="#ffffff" class="es-content-body" align="center" cellpadding="0" cellspacing="0" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:separate;border-spacing:0px;background-color:#ffffff;width:600px;border:2px solid #DBEAF2;border-radius:16px;background:#FFF;" role="none">
+           <table bgcolor="#ffffff" class="es-content-body" align="center" cellpadding="0" cellspacing="0" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;background-color:#ffffff;width:600px;border-radius:15px" role="none">
              <tr style="border-collapse:collapse">
               <td align="left" style="padding:0;Margin:0;padding-top:25px;">
                <table cellspacing="0" cellpadding="0" width="100%" role="none" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
@@ -93,13 +89,6 @@ a[x-apple-data-detectors] {
                  </tr>
                </table></td>
              </tr>
-           </table></td>
-         </tr>
-       </table>
-       <table cellpadding="0" cellspacing="0" class="es-content" align="center" role="none" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;table-layout:fixed !important;width:100%">
-         <tr style="border-collapse:collapse">
-          <td align="center" style="padding:0;Margin:0">
-           <table bgcolor="#FAFBFC" class="es-content-body" align="center" cellpadding="0" cellspacing="0" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;background-color:#fafbfc;width:600px;border-bottom-left-radius:15px; border-bottom-right-radius:15px;" role="none">
              <tr style="border-collapse:collapse">
               <td align="left" style="Margin:0;padding-left:10px;padding-right:10px;padding-top:40px;padding-bottom:40px">
                <table cellpadding="0" cellspacing="0" width="100%" role="none" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
