--- a/src/infrastructure/template/new-organization.hbs
+++ b/src/infrastructure/template/new-organization.hbs
@@ -79,8 +79,7 @@ a[x-apple-data-detectors] {
                    <table width="100%" cellspacing="0" cellpadding="0" role="presentation" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
                      <tr style="border-collapse:collapse">
                       <td align="center" class="es-m-txt-c" style="padding:0;Margin:0;padding-top:20px;padding-bottom:20px;font-size:0px"><a target="_blank" href="{{ link }}" style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:underline;color:#EF0D33;font-size:14px">
-                        <img src="{{baseUrl}}/assets/logo-sofia-horizontal.svg" 
-                        alt="" style="display:block;border:0;text-decoration:none;-ms-interpolation-mode:bicubic" width="150"></a></td>
+                        <img src="{{baseUrl}}/assets/logo-sofia-horizontal.svg" alt="Sofia Chat Logo" style="display:block;border:0;text-decoration:none;-ms-interpolation-mode:bicubic" width="150"></a></td>
                      </tr>
                      <tr style="border-collapse:collapse">
                       <td align="center" class="es-m-txt-c" style="padding:0;Margin:0;"><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'Satoshi', sans-serif;line-height:25px;color:#262626;font-size:15px">¡Te han agregado a una nueva organización!</p></td>
@@ -115,7 +114,7 @@ a[x-apple-data-detectors] {
                       <td align="center" style="padding:0;Margin:0;padding-bottom:40px"><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'Satoshi', sans-serif;line-height:21px;color:#262626;font-size:14px">Si necesitas ayuda o tienes preguntas, nuestro equipo está listo para asistirte. Responde a este correo o visita nuestra sección de soporte en https://sofiachat.com.</p><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'Satoshi', sans-serif;line-height:21px;color:#262626;font-size:14px"><br></p><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'Satoshi', sans-serif;line-height:21px;color:#262626;font-size:14px">¡Bienvenido a <b>{{ organization_name }}</b> en Sofia Chat! Estamos felices de tenerte a bordo.</p><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'Satoshi', sans-serif;line-height:21px;color:#262626;font-size:14px"><br></p><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'Satoshi', sans-serif;line-height:21px;color:#262626;font-size:14px">Saludos,</p><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'Satoshi', sans-serif;line-height:21px;color:#262626;font-size:14px">El equipo de Sofia Chat</p></td>
                      </tr>
                      <tr style="border-collapse:collapse">
-                      <td align="center" class="es-m-txt-c" style="padding:0;Margin:0;font-size:0px"><a target="_blank" href="{{ link }}" style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:underline;color:#EF0D33;font-size:14px"><img src="{{baseUrl}}/assets/logo-sofia.svg" alt="" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" width="50"></a></td>
+                      <td align="center" class="es-m-txt-c" style="padding:0;Margin:0;font-size:0px"><a target="_blank" href="{{ link }}" style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:underline;color:#EF0D33;font-size:14px"><img src="{{baseUrl}}/assets/logo-sofia.svg" alt="Sofia Chat Logo" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" width="50"></a></td>
                      </tr>
                      <tr style="border-collapse:collapse">
                       <td align="center" style="padding:0;Margin:0;padding-top:20px"><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'Satoshi', sans-serif;line-height:21px;color:#262626;font-size:14px">SOF.IA LLM 2025 Derechos Reservados</p></td>
@@ -123,16 +122,16 @@ a[x-apple-data-detectors] {
                      <tr style="border-collapse:collapse">
                       <td align="center" class="es-m-txt-c" style="padding:20px;Margin:0;font-size:0px">
                         <a target="_blank" href="{{ link1 }}" style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:none;">
-                          <img src="{{baseUrl}}/assets/logo-linkedin.svg" alt="LinkedIn" width="20" style="display:inline-block;border:0;outline:none;text-decoration:none;margin:0 20px;">
+                          <img src="{{baseUrl}}/assets/logo-linkedin.svg" alt="LinkedIn Logo" width="20" style="display:inline-block;border:0;outline:none;text-decoration:none;margin:0 20px;">
                         </a>
                         <a target="_blank" href="{{ link2 }}" style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:none;">
-                          <img src="{{baseUrl}}/assets/logo-whatsapp.svg" alt="Twitter" width="20" style="display:inline-block;border:0;outline:none;text-decoration:none;margin:0 20px;">
+                          <img src="{{baseUrl}}/assets/logo-whatsapp.svg" alt="WhatsApp Logo" width="20" style="display:inline-block;border:0;outline:none;text-decoration:none;margin:0 20px;">
                         </a>
                         <a target="_blank" href="{{ link3 }}" style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:none;">
-                          <img src="{{baseUrl}}/assets/logo-instagram.svg" alt="Facebook" width="20" style="display:inline-block;border:0;outline:none;text-decoration:none;margin:0 20px;">
+                          <img src="{{baseUrl}}/assets/logo-instagram.svg" alt="Instagram Logo" width="20" style="display:inline-block;border:0;outline:none;text-decoration:none;margin:0 20px;">
                         </a>
                         <a target="_blank" href="{{ link4 }}" style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:none;">
-                          <img src="{{baseUrl}}/assets/logo-facebook.svg" alt="Instagram" width="20" style="display:inline-block;border:0;outline:none;text-decoration:none;margin:0 20px;">
+                          <img src="{{baseUrl}}/assets/logo-facebook.svg" alt="Facebook Logo" width="20" style="display:inline-block;border:0;outline:none;text-decoration:none;margin:0 20px;">
                         </a>
                       </td>
                     </tr>
