--- a/src/infrastructure/template/reset-password.hbs
+++ b/src/infrastructure/template/reset-password.hbs
@@ -111,30 +111,32 @@ a[x-apple-data-detectors] {
                       </td>
                      </tr>
                      <tr style="border-collapse:collapse">
-                      <td align="center" style="padding:0;Margin:0;"><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'Open Sans', sans-serif;color:#262626;font-size:14px">Para crear una nueva contraseña, haz clic en el siguiente enlace:</p><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'Open Sans', sans-serif;color:#262626;font-size:20px;"><a target="_blank" style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:none;color:#000000;font-size:14px" href="">{{ reset link }}</a><br></p></td>
+                      <td align="center" style="padding:0;Margin:0;"><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'Open Sans', sans-serif;color:#262626;font-size:14px">Para crear una nueva contraseña, haz clic en el siguiente enlace:</p><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'Open Sans', sans-serif;color:#262626;font-size:20px;"><a target="_blank" style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:none;color:#000000;font-size:14px" href="{{resetPasswordLink}}">{{resetPasswordLink}}</a><br></p></td>
                      </tr>
                      <tr style="border-collapse:collapse">
                       <td align="center" style="padding-top:10px;Margin:0;padding-bottom:40px"><p style="Margin:0;padding-bottom:20px;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'Open Sans', sans-serif;line-height:21px;color:#262626;font-size:14px">Este enlace expirará en 4hrs por motivos de seguridad.</p><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'Open Sans', sans-serif;line-height:21px;color:#262626;font-size:14px"><br></p><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'Open Sans', sans-serif;line-height:21px;color:#262626;font-size:14px">Si necesitas ayuda, no dudes en responder a este correo o visitar nuestra sección de soporte en https://sofiachat.com.</p><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'Open Sans', sans-serif;line-height:21px;color:#262626;font-size:14px"><br></p><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'Open Sans', sans-serif;line-height:21px;color:#262626;font-size:14px">Saludos,</p><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'Open Sans', sans-serif;line-height:21px;color:#262626;font-size:14px">El equipo de Sofia Chat</p></td>
                      </tr>
                      <tr style="border-collapse:collapse">
-                      <td align="center" class="es-m-txt-c" style="padding:0;Margin:0;font-size:0px"><a target="_blank" href="{{ link }}" style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:underline;color:#EF0D33;font-size:14px"><img src="{{baseUrl}}/assets/logo-sofia.svg" alt="" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" width="50"></a></td>
+                      <td align="center" class="es-m-txt-c" style="padding:0;Margin:0;font-size:0px"><a target="_blank" href="{{resetPasswordLink}}" style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:underline;color:#EF0D33;font-size:14px">
+                        <img src="{{frontendBaseUrl}}/assets/logo-sofia-horizontal.svg" alt="" style="display:block;border:0;text-decoration:none;-ms-interpolation-mode:bicubic" width="150">
+                      </a></td>
                      </tr>
                      <tr style="border-collapse:collapse">
-                      <td align="center" style="padding:0;Margin:0;padding-top:20px"><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'Open Sans', sans-serif;line-height:21px;color:#262626;font-size:14px">SOF.IA LLM © 2025 Derechos Reservados</p></td>
+                      <td align="center" style="padding:0;Margin:0;padding-top:20px"><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'Open Sans', sans-serif;line-height:21px;color:#262626;font-size:14px">SOF.IA LLM 2025 Derechos Reservados</p></td>
                      </tr>
                      <tr style="border-collapse:collapse">
                       <td align="center" class="es-m-txt-c" style="padding:20px;Margin:0;font-size:0px">
-                        <a target="_blank" href="{{ link1 }}" style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:none;">
-                          <img src="{{baseUrl}}/assets/logo-linkedin.svg" alt="LinkedIn" width="20" style="display:inline-block;border:0;outline:none;text-decoration:none;margin:0 20px;">
+                        <a target="_blank" href="{{linkedinLink}}" style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:none;">
+                          <img src="{{frontendBaseUrl}}/assets/logo-linkedin.svg" alt="LinkedIn" width="20" style="display:inline-block;border:0;outline:none;text-decoration:none;margin:0 20px;">
                         </a>
-                        <a target="_blank" href="{{ link2 }}" style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:none;">
-                          <img src="{{baseUrl}}/assets/logo-whatsapp.svg" alt="Twitter" width="20" style="display:inline-block;border:0;outline:none;text-decoration:none;margin:0 20px;">
+                        <a target="_blank" href="{{whatsappLink}}" style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:none;">
+                          <img src="{{frontendBaseUrl}}/assets/logo-whatsapp.svg" alt="Twitter" width="20" style="display:inline-block;border:0;outline:none;text-decoration:none;margin:0 20px;">
                         </a>
-                        <a target="_blank" href="{{ link3 }}" style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:none;">
-                          <img src="{{baseUrl}}/assets/logo-instagram.svg" alt="Facebook" width="20" style="display:inline-block;border:0;outline:none;text-decoration:none;margin:0 20px;">
+                        <a target="_blank" href="{{instagramLink}}" style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:none;">
+                          <img src="{{frontendBaseUrl}}/assets/logo-instagram.svg" alt="Facebook" width="20" style="display:inline-block;border:0;outline:none;text-decoration:none;margin:0 20px;">
                         </a>
-                        <a target="_blank" href="{{ link4 }}" style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:none;">
-                          <img src="{{baseUrl}}/assets/logo-facebook.svg" alt="Instagram" width="20" style="display:inline-block;border:0;outline:none;text-decoration:none;margin:0 20px;">
+                        <a target="_blank" href="{{facebookLink}}" style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:none;">
+                          <img src="{{frontendBaseUrl}}/assets/logo-facebook.svg" alt="Instagram" width="20" style="display:inline-block;border:0;outline:none;text-decoration:none;margin:0 20px;">
                         </a>
                       </td>
                     </tr>
