--- a/src/infrastructure/template/plan-change.hbs
+++ b/src/infrastructure/template/plan-change.hbs
@@ -119,7 +119,7 @@ a[x-apple-data-detectors] {
                       <td align="center" class="es-m-txt-c" style="padding:0;Margin:0;font-size:0px"><a target="_blank" href="{{ link }}" style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:underline;color:#EF0D33;font-size:14px"><img src="{{backendBaseUrl}}/assets/logo-sofia.svg" alt="Converxa Logo" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" width="50"></a></td>
                      </tr>
                      <tr style="border-collapse:collapse">
-                      <td align="center" style="padding:0;Margin:0;padding-top:20px"><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'Satoshi', sans-serif;line-height:21px;color:#262626;font-size:14px">SOF.IA LLM 2025 Derechos Reservados</p></td>
+                      <td align="center" style="padding:0;Margin:0;padding-top:20px"><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'Satoshi', sans-serif;line-height:21px;color:#262626;font-size:14px">CONVERXA LLM 2025 Derechos Reservados</p></td>
                      </tr>
                      <tr style="border-collapse:collapse">
                       <td align="center" class="es-m-txt-c" style="padding:20px;Margin:0;font-size:0px">
