--- a/src/infrastructure/template/new-organization.hbs
+++ b/src/infrastructure/template/new-organization.hbs
@@ -103,7 +103,7 @@ a[x-apple-data-detectors] {
                      </tr>
                      <tr style="border-collapse:collapse">
                       <td align="center" class="es-m-txt-c" style="padding:0;Margin:0;padding-top:20px;padding-bottom:40px"><!--[if mso]><a href="{{ link }}" target="_blank" hidden>
-	<v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" esdevVmlButton href="{{ link }}" 
+	<v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" esdevVmlButton href="{{ link }}"
                 style="height:69px; v-text-anchor:middle; width:186px" arcsize="13%" stroke="f"  fillcolor="#15ecda">
 		<w:anchorlock></w:anchorlock>
 		<center style='color:#ffffff; font-family:Oswald, sans-serif; font-size:16px; font-weight:700; line-height:16px;  mso-text-raise:1px'>Iniciar sesión</center>
@@ -121,17 +121,17 @@ a[x-apple-data-detectors] {
                      </tr>
                      <tr style="border-collapse:collapse">
                       <td align="center" class="es-m-txt-c" style="padding:20px;Margin:0;font-size:0px">
-                        <a target="_blank" href="{{ link1 }}" style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:none;">
+                        <a target="_blank" href="{{linkedinLink}}" style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:none;">
                           <img src="{{backendBaseUrl}}/assets/logo-linkedin.svg" alt="LinkedIn" width="20" style="display:inline-block;border:0;outline:none;text-decoration:none;margin:0 20px;">
                         </a>
-                        <a target="_blank" href="{{ link2 }}" style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:none;">
-                          <img src="{{backendBaseUrl}}/assets/logo-whatsapp.svg" alt="WhatsApp" width="20" style="display:inline-block;border:0;outline:none;text-decoration:none;margin:0 20px;">
-                        </a>
-                        <a target="_blank" href="{{ link3 }}" style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:none;">
+                        <a target="_blank" href="{{instagramLink}}" style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:none;">
                           <img src="{{backendBaseUrl}}/assets/logo-instagram.svg" alt="Instagram" width="20" style="display:inline-block;border:0;outline:none;text-decoration:none;margin:0 20px;">
                         </a>
-                        <a target="_blank" href="{{ link4 }}" style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:none;">
+                        <a target="_blank" href="{{facebookLink}}" style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:none;">
                           <img src="{{backendBaseUrl}}/assets/logo-facebook.svg" alt="Facebook" width="20" style="display:inline-block;border:0;outline:none;text-decoration:none;margin:0 20px;">
+                        </a>
+                        <a target="_blank" href="{{xLink}}" style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:none;">
+                          <img src="{{backendBaseUrl}}/assets/logo-x.svg" alt="X" width="20" style="display:inline-block;border:0;outline:none;text-decoration:none;margin:0 20px;">
                         </a>
                       </td>
                     </tr>
