--- a/src/infrastructure/template/user-welcome.hbs
+++ b/src/infrastructure/template/user-welcome.hbs
@@ -87,10 +87,7 @@ a[x-apple-data-detectors] {
                                     <td align="center" class="es-m-txt-c" style="padding:0;Margin:0;padding-top:30px"><h1 style="Margin:0;line-height:33.6px;mso-line-height-rule:exactly;font-family:'Satoshi', sans-serif;font-size:28px;font-style:normal;font-weight:bold;color:#262626">Bienvenido</h1></td>
                                   </tr>
                                   <tr style="border-collapse:collapse">
-                                    <td align="center" class="es-m-txt-c" style="padding:0;Margin:0;padding-top:15px;"><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'Satoshi', sans-serif;line-height:25px;color:#262626;font-size:15px">Estamos muy contentos de tenerte como parte de Sofia.</p></td>
-                                  </tr>
-                                  <tr style="border-collapse:collapse">
-                                    <td align="center" class="es-m-txt-c" style="padding:0;Margin:0;padding-top:20px;font-size:0px"><a target="_blank" href="{{ link }}" style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:underline;color:#EF0D33;font-size:14px"><img src="{{backendBaseUrl}}/assets/sofia-welcome.svg" alt="Welcome to Converxa" style="display:block;border:0;text-decoration:none;-ms-interpolation-mode:bicubic" width="250" referrerPolicy="no-referrer"></a></td>
+                                    `<td align="center" class="es-m-txt-c" style="padding:0;Margin:0;padding-top:15px;"><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'Satoshi', sans-serif;line-height:25px;color:#262626;font-size:15px">Estamos muy contentos de tenerte como parte de Converxa.</p></td>
                                   </tr>
 
                             </table></td>
